share button alignment fix

--- a/src/content/index.scss
+++ b/src/content/index.scss
@@ -11,6 +11,7 @@
     padding: 0;
     border: none;
     background: none;
+    order: 1;
     .extension-button-container {
       display: flex;
       position: relative;
